clang/test/BSC/Negative/Ownership/Owned/return_qualified_type/return_qualified_type.cbs
// RUN: %clang_cc1 -ast-dump -Wextra -Werror -verify %s


void* owned test1(void* p) {    //legal
    void* owned a = (void* owned)p;
    return a;
}

void* const test2(void* p) {   //expected-error {{'const' type qualifier on return type has no effect}} [-Werror,-Wignored-qualifiers]
    void* const a = (void* const)p;
    return a;
}

int owned test3(int size) { //legal
    int owned a = (int owned)size;
    return a;
}

int const test4(int size) {   //expected-error {{'const' type qualifier on return type has no effect}} [-Werror,-Wignored-qualifiers]
    int const a = (int const)size;
    return a;
}

int const owned test5(int size) { //legal
    int const owned a = (int const owned)size;
    return a;
}


owned void* test7(void* p) {
    owned void* a = (owned void*)(p);
    return a;
}

const void* test8(void* p) {
    const void* a = (const void*)(p);
    return a;
}

T* owned safePtr<T>(T* p) {
    T* owned a = (T* owned)p;
    return a;
}

int testsafePtr(int* p1, float* p2) {
    int* owned sptr1 = safePtr<int>(p1);
    float* owned sptr2 = safePtr<float>(p2);
    if(sptr1) {
        return 0;
    }else if (sptr2) {
        return 1;
    }
    return 2;
}

